Bug 148754 - Selecting days and switching views does not work like expected
Summary: Selecting days and switching views does not work like expected
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-11 22:20 UTC by Ronny Standtke
Modified: 2008-12-31 02:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ronny Standtke 2007-08-11 22:20:58 UTC
Version:           3.5.5 (using KDE 3.5.7, Debian Package 4:3.5.7.dfsg.1-1 (lenny/sid))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.21-2-686

When I select a date in month view (not the left hand side mini view but the large screen filling month view) and switch to another view (week, day, ...) I expected to see my selected day. But obviously selecting a date in the month view has more or less no effect.
I have the same problem with many other views (day selection in week view and switching to day view, ...).
Comment 1 Ronny Standtke 2008-12-08 22:37:45 UTC
I just tested with KDE-4.2 Beta1 and the problem is still there.
Comment 2 Sergio Martins 2008-12-31 02:43:50 UTC
SVN commit 903617 by smartins:

Now, when switching views, if there's a day selected in the previous view, that day will be visible
in the new view.

BUG: 148754


 M  +5 -4      calendarview.h  
 M  +6 -3      koviewmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=903617