Now, when switching views, if there's a day selected in the previous view, that day will be visible in the new view.

BUG: 148754

svn path=/trunk/KDE/kdepim/; revision=903617